Add pipeline list policy to devops x-account role

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -45,6 +45,17 @@ Resources:
               - cloudfront:CreateInvalidation
             Resource:
               - "*"
+  CodePipelineListPipelinesPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - codepipeline:ListPipelines
+            Resource:
+              - "*"
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -66,6 +77,7 @@ Resources:
       ManagedPolicyArns:
         - !Ref CloudFrontListDistributionsPolicy
         - !Ref CloudFrontCreateInvalidationPolicy
+        - !Ref CodePipelineListPipelinesPolicy
       RoleName: !Sub ${CrossAccountAccessRoleName}
       Tags:
         - Key: Project
