Add pipeline start policy to devops x-account role

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -56,6 +56,17 @@ Resources:
               - codepipeline:ListPipelines
             Resource:
               - "*"
+  CodePipelineStartPipelineExecutionPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - codepipeline:StartPipelineExecution
+            Resource:
+              - "*"
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -78,6 +89,7 @@ Resources:
         - !Ref CloudFrontListDistributionsPolicy
         - !Ref CloudFrontCreateInvalidationPolicy
         - !Ref CodePipelineListPipelinesPolicy
+        - !Ref CodePipelineStartPipelineExecutionPolicy
       RoleName: !Sub ${CrossAccountAccessRoleName}
       Tags:
         - Key: Project
