Fix root account activity monitor template

--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -100,29 +100,6 @@ Resources:
   Function:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri:
-        InlineCode: |
-          const AWS = require('aws-sdk');
-
-          const sns = new AWS.SNS({ apiVersion: '2010-03-31' });
-
-          const SLACK_ICON = ':ops-cloudtrail:';
-          const SLACK_USERNAME = 'AWS CloudTrail';
-          const SLACK_CHANNEL = '#ops-fatal';
-
-          exports.handler = async (event) => {
-            console.log(JSON.stringify(event))
-
-            await sns.publish({
-              TargetArn: process.env.SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN,
-              Message: JSON.stringify({
-                channel: SLACK_CHANNEL,
-                username: SLACK_USERNAME,
-                icon_emoji: SLACK_ICON,
-                text: `Root account event detected - ${event.account} ${event['detail-type']} ${event.region} ${event.detail.eventName}`,
-              }),
-            }).promise();
-          };
       Description: >-
         Receives CloudWatch Events rule events related to root account activity
         and sends a message to the Slack relay
@@ -138,10 +115,32 @@ Resources:
                 - AWS API Call via CloudTrail
                 - AWS Console Sign In via CloudTrail
               detail:
-                - userIdentity:
-                    type:
-                      - Root
+                userIdentity:
+                  type:
+                    - Root
       Handler: index.handler
+      InlineCode: |
+        const AWS = require('aws-sdk');
+
+        const sns = new AWS.SNS({ apiVersion: '2010-03-31' });
+
+        const SLACK_ICON = ':ops-cloudtrail:';
+        const SLACK_USERNAME = 'AWS CloudTrail';
+        const SLACK_CHANNEL = '#ops-fatal';
+
+        exports.handler = async (event) => {
+          console.log(JSON.stringify(event))
+
+          await sns.publish({
+            TargetArn: process.env.SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN,
+            Message: JSON.stringify({
+              channel: SLACK_CHANNEL,
+              username: SLACK_USERNAME,
+              icon_emoji: SLACK_ICON,
+              text: `Root account event detected - ${event.account} ${event['detail-type']} ${event.region} ${event.detail.eventName}`,
+            }),
+          }).promise();
+        };
       MemorySize: 128
       Policies:
         - AWSLambdaBasicExecutionRole
