Add organization trail support to activity monitor

--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -36,9 +36,21 @@ Description: >-
   Creates a CloudWatch Events rule that triggers a Lambda function whenever
   there is root account API or Console activity in CloudTrail. A global,
   multi-region CloudTrail trail is also created to log those activities.
+
 Parameters:
   SlackMessageRelayTopicArn:
     Type: String
+  OrganizationId:
+    Type: String
+    Description: >-
+      optional. An AWS Organization ID in the format: o-a1s2d3f4f5g. If
+      included, the CloudTrail that is created will be a organization trail,
+      and log activity from all accounts in the given organization.
+    AllowedPattern: ^$|^(o-[a-z0-9]{4,32})$
+
+Conditions:
+  IsCloudTrailOrganizationTrail: !Not [!Equals [!Ref OrganizationId, ""]]
+
 Resources:
   # CloudTrail
   CloudTrailS3Bucket:
@@ -80,6 +92,15 @@ Resources:
             Condition:
               StringEquals:
                 s3:x-amz-acl: bucket-owner-full-control
+          - Sid: AWSOrgCloudTrailWrite
+            Effect: Allow
+            Principal:
+              Service: cloudtrail.amazonaws.com
+            Action: s3:PutObject
+            Resource: !Sub ${CloudTrailS3Bucket.Arn}/AWSLogs/${OrganizationId}/*
+            Condition:
+              StringEquals:
+                s3:x-amz-acl: bucket-owner-full-control
   CloudTrail:
     Type: AWS::CloudTrail::Trail
     DependsOn:
@@ -96,8 +117,18 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-  # Function
-  Function:
+  CloudTrailIsOrganizationTrailCustomResource:
+    DependsOn:
+      - CloudTrail
+      - CloudTrailS3BucketPolicy
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt OrganizationTrailCustomResourceFunction.Arn
+      # This property is always sent to the Lambda event as a string, even
+      # if it's a true YAML boolean value
+      IsOrganizationTrail: !If [IsCloudTrailOrganizationTrail, true, false]
+  # Monitor Function
+  MonitorFunction:
     Type: AWS::Serverless::Function
     Properties:
       Description: >-
@@ -152,8 +183,80 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 10
-  FunctionLogGroup:
+  MonitorFunctionLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub /aws/lambda/${Function}
-      RetentionInDays: 3653
+      LogGroupName: !Sub /aws/lambda/${MonitorFunction}
+      RetentionInDays: 30
+  # CloudTrail IsOrganizationTrail custom resource function
+  OrganizationTrailCustomResourceFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Description: >-
+        A CloudFormation custom resource function that provides support for
+        the IsOrganizationTrail property of trails in AWS CloudTrail.
+      Environment:
+        Variables:
+          TRAIL_ARN: !GetAtt CloudTrail.Arn
+      Handler: index.handler
+      InlineCode: |
+        const AWS = require('aws-sdk');
+        const cfnResponse = require('cfn-response');
+
+        const cloudtrail = new AWS.CloudTrail({ apiVersion: '2013-11-01' });
+
+        exports.handler = async (event, context) => {
+          try {
+            console.log(JSON.stringify(event));
+
+            // No need to update the trail when the custom resource is being
+            // deleted.
+            if (['Create', 'Update'].includes(event.RequestType)) {
+              // The custom Properties of a custom resource always come in
+              // to the event as strings
+              const flag = event.ResourceProperties.IsOrganizationTrail === 'true' ? true : false;
+
+              console.log(`Setting IsOrganizationTrail to ${flag}`);
+
+              const res = await cloudtrail.updateTrail({
+                Name: process.env.TRAIL_ARN,
+                IsOrganizationTrail: flag,
+              }).promise();
+
+              console.log(res);
+            }
+
+            await cfnResponse.send(event, context, cfnResponse.SUCCESS, {});
+          } catch (error) {
+            console.log('Sending FAILED response');
+            console.log(error);
+            await cfnResponse.send(event, context, cfnResponse.FAILED, {});
+          }
+        };
+      MemorySize: 128
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/AWSCloudTrail_FullAccess
+        - Statement:
+            - Action:
+                - iam:GetRole
+                - organizations:EnableAWSServiceAccess
+                - organizations:ListAccounts
+                - iam:CreateServiceLinkedRole
+                - organizations:DisableAWSServiceAccess
+                - organizations:DescribeOrganization
+                - organizations:ListAWSServiceAccessForOrganization
+              Effect: Allow
+              Resource: "*"
+          Version: "2012-10-17"
+      Runtime: nodejs12.x
+      Tags:
+        Project: Admin
+        "prx:cloudformation:stack-name": !Ref AWS::StackName
+        "prx:cloudformation:stack-id": !Ref AWS::StackId
+      Timeout: 30
+  OrganizationTrailCustomFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${OrganizationTrailCustomResourceFunction}
+      RetentionInDays: 7
