--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -160,7 +160,7 @@ Resources:
         const SLACK_CHANNEL = '#ops-fatal';
 
         exports.handler = async (event) => {
-          console.log(JSON.stringify(event))
+          console.log(JSON.stringify(event));
 
           await sns.publish({
             TargetArn: process.env.SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN,
