Temporary cloudfront domain for testing edge lambda things

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -166,6 +166,16 @@ Resources:
             DNSName: d3lbo76wcalex1.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
+          Name: !Sub ryan-cdn.${Domain}
+          AliasTarget:
+            DNSName: d3l72zpcrodhix.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub ryan-cdn.${Domain}
+          AliasTarget:
+            DNSName: d3l72zpcrodhix.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
           Name: !Sub f-staging.${Domain}
           AliasTarget:
             DNSName: d2pni491hnsr7.cloudfront.net
@@ -272,3 +282,8 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _b8dd66197d6cc156051d931a5f7ecdd9.a.${Domain}
+        - ResourceRecords:
+            - _5fc354300b4b7053d26a30e3b2020104.vtqfhvjlcp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _75d78367cfe3cd325df71e6dfd29a2ef.ryan-cdn.${Domain}
