--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1571,4 +1571,4 @@ Resources:
             - vanity.classy.org.
           TTL: "300"
           Type: CNAME
-          Name: !Sub support.${Domain}
+          Name: !Sub give.${Domain}
