Block all public access on uploads bucket

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -234,6 +234,11 @@ Resources:
         Rules:
           - ExpirationInDays: 3
             Status: Enabled
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
       Tags:
         - Key: Project
           Value: !FindInMap [Shared, Project, name]
