Use s3-accelerate endpoint

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -132,7 +132,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: UPLOAD_S3_ENDPOINT_HOST
-              Value: !GetAtt PublishUploadsBucket.DualStackDomainName
+              Value: !Sub ${PublishUploadsBucket}.s3-accelerate.dualstack.amazonaws.com
             - Name: UPLOAD_BUCKET_NAME
               Value: !Ref PublishUploadsBucket
           Essential: true
