Use inline deploy bucket for Radiotopia Radio

--- a/stacks/static-sites/radio.radiotopia.fm.yml
+++ b/stacks/static-sites/radio.radiotopia.fm.yml
@@ -6,23 +6,40 @@ Parameters:
     Type: String
   StaticSiteArchiveS3ObjectVersion:
     Type: String
-  StaticSiteS3StagingDeployBucket:
-    Type: AWS::SSM::Parameter::Value<String>
-  StaticSiteS3ProductionDeployBucket:
-    Type: AWS::SSM::Parameter::Value<String>
+  # StaticSiteS3StagingDeployBucket:
+  #   Type: AWS::SSM::Parameter::Value<String>
+  # StaticSiteS3ProductionDeployBucket:
+  #   Type: AWS::SSM::Parameter::Value<String>
   EnvironmentType:
     Type: String
   S3StaticSiteDeployFunctionArn:
     Type: String
-Conditions:
-  IsProduction: !Equals [!Ref EnvironmentType, Production]
 Resources:
   S3StaticDeploy:
-    Type: "Custom::S3StaticDeploy"
+    Type: Custom::S3StaticDeploy
     Properties:
       ServiceToken: !Ref S3StaticSiteDeployFunctionArn
       Region: !Ref AWS::Region
       StaticSiteArchiveS3Bucket: !Ref CodeS3Bucket
-      StaticSiteArchiveS3Object: "s3-static/PRX-radio.radiotopia.fm.zip"
+      StaticSiteArchiveS3Object: s3-static/PRX-radio.radiotopia.fm.zip
       StaticSiteArchiveS3ObjectVersion: !Ref StaticSiteArchiveS3ObjectVersion
-      StaticSiteS3DeployBucket: !If [IsProduction, !Ref StaticSiteS3ProductionDeployBucket, !Ref StaticSiteS3StagingDeployBucket]
+      StaticSiteS3DeployBucket: !Ref DeployBucket
+  DeployBucket:
+    Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
+    Properties:
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      Tags:
+        - Key: Project
+          Value: radio.radiotopia.fm
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
