--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -11,6 +11,8 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
   BetaPrxOrgArchiveS3ObjectVersion:
     Type: String
   BacksawArchiveS3ObjectVersion:
@@ -95,6 +97,7 @@ Resources:
         StaticSiteArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
+        StaticSiteCloudFrontOai: !Sub /prx/${EnvironmentTypeAbbreviation}/backsaw.prx.org/CLOUDFRONT_OAI
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
