--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -221,6 +221,7 @@ Resources:
         InfrastructureNotificationsStackName: !Ref NotificationsStackName
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/static-sites/"]]
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
         BacksawArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
       Tags:
