Use more obvious bucket name

--- a/stacks/static-sites/backsaw.prx.org.yml
+++ b/stacks/static-sites/backsaw.prx.org.yml
@@ -21,8 +21,8 @@ Resources:
       StaticSiteArchiveS3Bucket: !Ref CodeS3Bucket
       StaticSiteArchiveS3Object: s3-static/PRX-backsaw.prx.org.zip
       StaticSiteArchiveS3ObjectVersion: !Ref StaticSiteArchiveS3ObjectVersion
-      StaticSiteS3DeployBucket: !Ref DeployBucket
-  DeployBucket:
+      StaticSiteS3DeployBucket: !Ref BacksawBucket
+  BacksawBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
@@ -45,7 +45,7 @@ Resources:
     Type: AWS::S3::BucketPolicy
     Properties:
       Bucket:
-        Ref: DeployBucket
+        Ref: BacksawBucket
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -53,5 +53,5 @@ Resources:
             Effect: Allow
             Principal:
               AWS: !Ref StaticSiteCloudFrontOai
-            Resource: !Sub arn:aws:s3:::${DeployBucket}/*
+            Resource: !Sub arn:aws:s3:::${BacksawBucket}/*
             Sid: Grant read access to a CloudFront Origin Identity
