--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -870,8 +870,7 @@ Resources:
   CdPipelineS3TriggerTrailStoreBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket:
-        Ref: CdPipelineS3TriggerTrailStore
+      Bucket: !Ref CdPipelineS3TriggerTrailStore
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
