--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -72,8 +72,7 @@ Resources:
   CloudTrailS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket:
-        Ref: CloudTrailS3Bucket
+      Bucket: !Ref CloudTrailS3Bucket
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
