--- a/stacks/static-sites/backsaw.prx.org.yml
+++ b/stacks/static-sites/backsaw.prx.org.yml
@@ -44,8 +44,7 @@ Resources:
   DeployBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket:
-        Ref: BacksawBucket
+      Bucket: !Ref BacksawBucket
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
