Allow CD to delete some S3 resource types

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1155,10 +1155,12 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              # Never let CloudFormation delete anything from S3
+              # Never let CloudFormation delete object/buckets from S3
               - Effect: Deny
                 Action:
-                  - s3:Delete*
+                  - s3:DeleteBucket
+                  - s3:DeleteObject
+                  - s3:DeleteObjectVersion
                 Resource: "*"
               - Effect: Allow
                 Action:
