--- a/stacks/static-sites/backsaw.prx.org.yml
+++ b/stacks/static-sites/backsaw.prx.org.yml
@@ -1,6 +1,8 @@
 # stacks/static-sites/backsaw.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Backsaw static site deployment
+Description: >-
+  Backsaw static site deployment. Intended to be hosted by a CloudFront
+  distribution that is managed separately.
 Parameters:
   CodeS3Bucket:
     Type: String
