--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -132,11 +132,17 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: UPLOAD_S3_ENDPOINT_HOST
-              # Value: !Sub ${PublishUploadsBucket}.s3-accelerate.dualstack.amazonaws.com
-              Value: prx-up.s3-accelerate.dualstack.amazonaws.com
+              Value:
+                !If
+                  - CreateProductionResources
+                  - prx-up.s3-accelerate.dualstack.amazonaws.com
+                  - !Sub ${PublishUploadsBucket}.s3-accelerate.dualstack.amazonaws.com
             - Name: UPLOAD_BUCKET_NAME
-              # Value: !Ref PublishUploadsBucket
-              Value: prx-up
+              Value:
+                !If
+                  - CreateProductionResources
+                  - prx-up
+                  - !Ref PublishUploadsBucket
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/publish.prx.org:${PublishEcrImageTag}
           LogConfiguration:
