Add CORS config to Publish bucket

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -237,6 +237,24 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
+      CorsConfiguration:
+        CorsRules:
+          - AllowedHeaders:
+              - "*"
+            AllowedMethods:
+              - DELETE
+              - GET
+              - HEAD
+              - POST
+              - PUT
+            AllowedOrigins:
+              - "*"
+            ExposedHeaders:
+              - ETag
+              - Content-Type
+              - Content-Length
+              - Date
+            MaxAge: 3000
       LifecycleConfiguration:
         Rules:
           - ExpirationInDays: 3
