Enable S3 acceleration for Publish bucket

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -237,6 +237,8 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
+      AccelerateConfiguration:
+        AccelerationStatus: Enabled
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
