Allow (but ignore) public ACLs for Publish uploads

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -262,7 +262,7 @@ Resources:
           - ExpirationInDays: 3
             Status: Enabled
       PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
+        BlockPublicAcls: false
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
