Use default TLS certificate

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -293,6 +293,7 @@ Resources:
             HeaderBehavior: none
           QueryStringsConfig:
             QueryStringBehavior: none
+  # CDN
   PublishUploadsCloudFrontOriginRequestPolicy:
     Type: AWS::CloudFront::OriginRequestPolicy
     Properties:
@@ -332,9 +333,7 @@ Resources:
               OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${PublishUploadsCloudFrontOriginAccessIdentity}
         PriceClass: PriceClass_All
         ViewerCertificate:
-          AcmCertificateArn: !Ref VPCCertificateArn
-          MinimumProtocolVersion: TLSv1.2_2019
-          SslSupportMethod: sni-only
+          CloudFrontDefaultCertificate: true
   PublishUploadsCloudFrontOriginAccessIdentity:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
     Properties:
