Fix syntax error

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -327,7 +327,7 @@ Resources:
         HttpVersion: http2
         IPV6Enabled: true
         Origins:
-          - DomainName: !Ref PublishUploadsBucket.RegionalDomainName
+          - DomainName: !GetAtt PublishUploadsBucket.RegionalDomainName
             Id: !FindInMap [Shared, Project, name]
             S3OriginConfig:
               OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${PublishUploadsCloudFrontOriginAccessIdentity}
