Fix bucket policy OAI value

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -349,7 +349,7 @@ Resources:
           - Action: s3:GetObject
             Effect: Allow
             Principal:
-              AWS: !Ref PublishUploadsCloudFrontOriginAccessIdentity
+              AWS: !Sub arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity ${PublishUploadsCloudFrontOriginAccessIdentity}
             Resource: !Sub arn:aws:s3:::${PublishUploadsBucket}/*
             Sid: Grant read access to a CloudFront Origin Identity
 Outputs:
