Add validation record for *.staging

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1561,6 +1561,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _9784f5f1de33eb78c3db79157146f598.youthradioleaders.${Domain}
+        - ResourceRecords:
+            - _a8bee31e51e6de781121aed08bcbf4d1.hkmpvcwbzw.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _c734a125558ad81f4bddc3bf33a25a24.staging.${Domain}
   Classy:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
