Only create CDN for Play in production

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -180,6 +180,7 @@ Resources:
       TaskDefinition: !Ref PlayTaskDefinition
   # Route 53
   PlayWebRecordSetGroup:
+    Condition: CreateProductionResources
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Record sets for dualstack web traffic to an play instance
@@ -196,6 +197,7 @@ Resources:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
   PlayCdnWebRecordSetGroup:
+    Condition: CreateProductionResources
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Record sets for CloudFront distribution
@@ -233,6 +235,7 @@ Resources:
             QueryStrings:
               - url
   PlayCloudFrontOriginRequestPolicy:
+    Condition: CreateProductionResources
     Type: AWS::CloudFront::OriginRequestPolicy
     Properties:
       OriginRequestPolicyConfig:
@@ -247,6 +250,7 @@ Resources:
           QueryStrings:
             - url
   PlayCloudFrontDistribution:
+    Condition: CreateProductionResources
     Type: "AWS::CloudFront::Distribution"
     Properties:
       DistributionConfig:
