Add play.prx.org ACM validation record

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1566,6 +1566,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _c734a125558ad81f4bddc3bf33a25a24.staging.${Domain}
+        - ResourceRecords:
+            - _0902f8141c71ef447fee9033925c4428.hkmpvcwbzw.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _8d09676a833865f3cf06c51a75ead3e6.play.${Domain}
   Classy:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
