--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -181,6 +181,7 @@ Resources:
   # Route 53
   PlayWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
+    Condition: CreateProductionResources
     Properties:
       Comment: Record sets for dualstack web traffic to an play instance
       HostedZoneName: prx.tech.
