--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -8,9 +8,11 @@
 # the config file. It can then pass along select values to nested stacks that
 # require them.
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+
+Description: >-
   Launches stacks for a number of applications and services that are maintained
   in separate templates.
+
 Parameters:
   AwsOrganizationId:
     Type: String
@@ -139,6 +141,7 @@ Parameters:
     Type: String
   PipelineExecutionNonce:
     Type: String
+
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -206,6 +209,7 @@ Mappings:
       prefix: 70
     Iframely:
       prefix: 73
+
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -848,6 +852,7 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/proxy.prx.org.yml"]]
       TimeoutInMinutes: 5
+
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
